5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1712_2504.log
== TEST (2019-05-13 00:20:04) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel contadora 1
qpl= qil + ((qil * pl)/100) #variavel contadora 2
dias = 1 variavel contadora #variavel acumuladora

while (qpv < pql):
	pqv = pqv +((pqv * pv)/100)
	pqv = pqv +((pql * pl)/100)
	dias = dias + 1
print(dias)
-- ERROR:
File "XXXX", line 8
    dias = 1 variavel contadora #variavel acumuladora
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 00:20:18) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel contadora 1
qpl= qil + ((qil * pl)/100) #variavel contadora 2
dias = 1 #variavel acumuladora

while (qpv < pql):
	pqv = pqv +((pqv * pv)/100)
	pqv = pqv +((pql * pl)/100)
	dias = dias + 1
print(dias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (qpv < pql):
NameError: name 'pql' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 00:21:51) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel contadora 1
qpl= qil + ((qil * pl)/100) #variavel contadora 2
dias = 1 #variavel acumuladora

while (qpv < qpl):
	pqv = pqv +((pqv * pv)/100)
	pqv = pqv +((pql * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 00:22:56) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel contadora 1
qpl= qil + ((qil * pl)/100) #variavel contadora 2
dias = 1 #variavel acumuladora

while (qpv > qpl):
	pqv = pqv +((pqv * pv)/100)
	pqv = pqv +((pql * pl)/100)
	dias = dias + 1
print(dias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pqv = pqv +((pqv * pv)/100)
NameError: name 'pqv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 00:24:35) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel contadora 1
qpl= qil + ((qil * pl)/100) #variavel contadora 2
dias = 1 #variavel acumuladora

while (qpv < qpl):
	qpv = pqv +((qpv * pv)/100)
	qpl = pql +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 00:25:17) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel contadora 1
qpl= qil + ((qil * pl)/100) #variavel contadora 2
dias = 1 #variavel acumuladora

while (qpv < qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:25:24) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel contadora 1
qpl= qil + ((qil * pl)/100) #variavel contadora 2
dias = 1 #variavel acumuladora

while (qpv < qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:30:30) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n + 1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:30:56) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n + 1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:32:29) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 1 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:32:42) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 1 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:32:57) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 1 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- EXECUTION TIME:
0.143086
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
8
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:32:59) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 1 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:33:27) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 2 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:33:42) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 2 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:33:50) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 3 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:34:07) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 3 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- EXECUTION TIME:
0.150438
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
10
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
6
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:38:44) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + (((2 *qil) * pl)/100) #variavel acumuladora 2
dias = 1 #variavel contadora

while (qpv > qpl):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:23:29) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 0 #variavel contadora

while ((qpv / qpl)<= 2):
	qpv = qpv +((qpv * pv)/100)
	qpl = qpl +((qpl * pl)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:24:05) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

qpv= qic + ((qic * pv)/100) #variavel acumuladora 1
qpl= qil + ((qil * pl)/100) #variavel acumuladora 2
dias = 0 #variavel contadora

while ((qpv / qpl)<= 2):
	qpv = qpv +(qpv * (pv/100))
	qpl = qpl +(qpl * (pl/100))
	dias = dias + 1
print(dias)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:26:01) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

dias = 0

while ((qil / qic)<= 2):
	qic = qic +(qic * (pv/100))
	qil = qil +(qil * (pl/100))
	dias = dias + 1
print(dias)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:26:12) 
-- CODE:
qic= int(input("quantidade inicial de copia: "))
qil= int(input("quantidade inicial de leucocitos: "))
pv= float(input("percentual de virus: "))
pl= float(input("percentual de leucocitos: "))

dias = 0

while ((qil / qic)<= 2):
	qic = qic +(qic * (pv/100))
	qil = qil +(qil * (pl/100))
	dias = dias + 1
print(dias)
-- EXECUTION TIME:
0.124544
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
